// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden anotace nad reálným obsahem > seed 7, 4 hráči, Brody 1`] = `
[
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Na výběr: dvě cesty — typ místa je vidět předem a rozhoduje o tom, jestli projde zbraň.",
      },
    ],
    "seq": 2,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: Slepá ulička v Bronxu (člověk) — někdo se ti dívá do rukou — zbraň na očích neprojde.",
      },
    ],
    "seq": 3,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (obrana, improvizace, útok), jedna skrytá role čeká na nejhorší. Zbraň na očích neprojde.",
      },
    ],
    "seq": 4,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce obranu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Držet nervy: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Zamluvit to: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce útok · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Zastrašit gestem: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Najít skulinu: kotva 2, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 6,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "Tažení je naslepo, v ruce zbývalo kusů: 2. Sázka jde jednou za situaci. Tažená věc nevyšla — slot 2.",
        "misto": "spis",
        "veta": "Sázka: místo „Stříbrná placatka" přišel „Dámský revolver" (ruka Vincenc Bartoš).",
      },
    ],
    "seq": 8,
    "typ": "gamble",
  },
  {
    "anotace": [
      {
        "detail": "„Otrlený výraz" — Frank Kowalski · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 0,
        "veta": "obrana 4 proti prahu 2.",
      },
    ],
    "seq": 10,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Dámský revolver" — Vincenc Bartoš · Telegraf to hlásil předem: zbraň na očích tady neprojde. · Práh 5 = kotva 4 +1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 1,
        "veta": "„Dámský revolver" je zbraň ve viditelné roli — padá bez ohledu na staty.",
      },
    ],
    "seq": 11,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Lopata" — Vincenc Bartoš · Práh 5 = kotva 4 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Chtělo to útok 5, „Lopata" má 3.",
      },
    ],
    "seq": 12,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Dědkův kabát" — Rudolf Mazur · Práh 2 = kotva 2 bez šumu.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 3,
        "veta": "nástroj 3 proti prahu 2.",
      },
    ],
    "seq": 13,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Z toho, co tým committnul, se líp rozdělit nedalo — tohle bylo nejlepší možné.",
        "misto": "spis",
        "veta": "Pásmo 2/4 — s následky: 2 ze 4 slotů prošly.",
      },
    ],
    "seq": 14,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 2 na 2 — zbraň v akci, dokud je aktivní Okresní šerif Brody, štítek Gangster se počítá dvojnásob.",
      },
    ],
    "seq": 15,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 3 — uzel zvládnutý s následky.",
      },
    ],
    "seq": 16,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "co má štítek Gangster, vlastníkovi ve slotu propadne; vyprší za 3 kola. Aktivních postihů: 1.",
        "misto": "spis",
        "veta": "Za 2/4 — s následky: Vincenc Bartoš — Nervy v hajzlu (lehký, zámkový).",
      },
    ],
    "seq": 17,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Zátah: Žár překročil práh, jiná cesta než přes kontrolu není.",
      },
    ],
    "seq": 18,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: Zátah na páté silnici (zátah) — jiná cesta není — zbraň projde.",
      },
    ],
    "seq": 19,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (útok, nástroj, improvizace), jedna skrytá role čeká na nejhorší. Zbraň tady projde i na očích.",
      },
    ],
    "seq": 20,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce útok · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Prorazit blokádu: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Strhnout do postranní: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Zmizet v ulicích: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Držet nervy u okna: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 22,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Mosazný boxer" — Frank Kowalski · Práh 5 = kotva 4 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 0,
        "veta": "Chtělo to útok 5, „Mosazný boxer" má 4.",
      },
    ],
    "seq": 25,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Svářečka" — Cesare Fontana · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 1,
        "veta": "nástroj 5 proti prahu 2.",
      },
    ],
    "seq": 26,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Kastrol na hlavě" — Vincenc Bartoš · Práh 4 = kotva 4 bez šumu.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Chtělo to improvizaci 4, „Kastrol na hlavě" má 3.",
      },
    ],
    "seq": 27,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Pytel cementu" — Rudolf Mazur · Práh 4 = kotva 3 +1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 3,
        "veta": "Chtělo to obranu 4, „Pytel cementu" má 3.",
      },
    ],
    "seq": 28,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Optimální rozdělení TÉHOŽ commitu by dalo 2/4 (2/4 — s následky) — 1 zásah zůstal na stole.",
        "misto": "spis",
        "veta": "Pásmo ≤1/4 — průšvih: 1 ze 4 slotů prošel. Náklad ztrácí 1 bednu (zbývá 5).",
      },
    ],
    "seq": 29,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 4 — hlučné násilí (vysoký útok).",
      },
    ],
    "seq": 30,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 2 na 6 — průšvih v uzlu.",
      },
    ],
    "seq": 31,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "vlastník vidí názvy věcí, ne jejich staty; drží do vyléčení v motelu. Aktivních postihů: 1.",
        "misto": "spis",
        "veta": "Za ≤1/4 — průšvih: Frank Kowalski — Otřes mozku (těžký, informační).",
      },
    ],
    "seq": 32,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (improvizace, hodnota, obrana), jedna skrytá role čeká na nejhorší. Zbraň na očích neprojde. Ve skryté roli se ale zbraň vyplatí.",
      },
    ],
    "seq": 33,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Uklidnit dav: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce hodnotu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Přimazat dlaň: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Kamenná tvář: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce útok · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Kdyby padl výstřel: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 35,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Kněžský kolárek" — Frank Kowalski · Práh 5 = kotva 4 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 0,
        "veta": "Chtělo to improvizaci 5, „Kněžský kolárek" má 4.",
      },
    ],
    "seq": 38,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Zlaté hodinky" — Rudolf Mazur · Práh 5 = kotva 4 +2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 1,
        "veta": "hodnota 5 proti prahu 5.",
      },
    ],
    "seq": 39,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Pytel brambor" — Vincenc Bartoš · Práh 3 = kotva 3 bez šumu.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 2,
        "veta": "obrana 4 proti prahu 3.",
      },
    ],
    "seq": 40,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Slzy na povel" — Cesare Fontana · Práh 5 = kotva 3 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 3,
        "veta": "Chtělo to útok 5, „Slzy na povel" má 0.",
      },
    ],
    "seq": 41,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Z toho, co tým committnul, se líp rozdělit nedalo — tohle bylo nejlepší možné.",
        "misto": "spis",
        "veta": "Pásmo 2/4 — s následky: 2 ze 4 slotů prošly.",
      },
    ],
    "seq": 42,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 7 — uzel zvládnutý s následky.",
      },
    ],
    "seq": 43,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "týmu ubyla 1 bedna nákladu; jednorázově. Aktivních postihů: 0.",
        "misto": "spis",
        "veta": "Za 2/4 — s následky: Frank Kowalski — Vysypaná bedna (lehký, ztrátový).",
      },
    ],
    "seq": 44,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "misto": "spis",
        "veta": "Postih „Nervy v hajzlu" (Vincenc Bartoš) vypršel.",
      },
    ],
    "seq": 45,
    "typ": "penalty_expired",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Na výběr: dvě cesty — typ místa je vidět předem a rozhoduje o tom, jestli projde zbraň.",
      },
    ],
    "seq": 46,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: nález — situace se neřeší — něco se jen najde.",
      },
    ],
    "seq": 47,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Kredity +6 (nález v truhle), zůstatek 6.",
      },
    ],
    "seq": 48,
    "typ": "credit_flow",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Tým zajel do motelu — léčení a směna stojí kredity, čas neběží.",
      },
    ],
    "seq": 49,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Kredity −6 (léčení v motelu), zůstatek 0.",
      },
    ],
    "seq": 50,
    "typ": "credit_flow",
  },
  {
    "anotace": [
      {
        "detail": "Těžké postihy se jinak než v motelu nezbavíš — složení maže jen lehké.",
        "misto": "spis",
        "veta": "Postih „Otřes mozku" (Frank Kowalski) vyléčen v motelu za 6 kreditů.",
      },
    ],
    "seq": 51,
    "typ": "penalty_healed",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Na výběr: dvě cesty — typ místa je vidět předem a rozhoduje o tom, jestli projde zbraň.",
      },
    ],
    "seq": 52,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: Statkářova stodola (lokace) — nikdo tě nešpehuje — zbraň projde i na očích.",
      },
    ],
    "seq": 53,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (improvizace, nástroj + improvizace, nástroj), jedna skrytá role čeká na nejhorší. Zbraň tady projde i na očích.",
      },
    ],
    "seq": 54,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Utišit psy: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj a improvizaci (OBA staty) · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Zaklínit vrata: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Schovat bednu do sena: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Nedýchat, když jde kolem: kotva 2, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 56,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "Tažení je naslepo, v ruce zbývalo kusů: 3. Sázka jde jednou za situaci. Tažená věc nevyšla — slot 2.",
        "misto": "spis",
        "veta": "Sázka: místo „Gumový váček" přišel „Balík bankovek" (ruka Vincenc Bartoš).",
      },
    ],
    "seq": 58,
    "typ": "gamble",
  },
  {
    "anotace": [
      {
        "detail": "„Konšelův prsten" — Frank Kowalski · Práh 3 = kotva 4 −1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 0,
        "veta": "Chtělo to improvizaci 3, „Konšelův prsten" má 1.",
      },
    ],
    "seq": 60,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Balík bankovek" — Vincenc Bartoš · Práh 2 = kotva 3 −1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 1,
        "veta": "Kombi slot chce OBA staty nad práh 2: „Balík bankovek" má nástroj 0, improvizace 1.",
      },
    ],
    "seq": 61,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Petrolejová lampa" — Rudolf Mazur · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 2,
        "veta": "nástroj 3 proti prahu 2.",
      },
    ],
    "seq": 62,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Kožená zástěra" — Vincenc Bartoš · Práh 0 = kotva 2 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 3,
        "veta": "obrana 4 proti prahu 0.",
      },
    ],
    "seq": 63,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Optimální rozdělení TÉHOŽ commitu by dalo 3/4 (3/4 — hladce) — 1 zásah zůstal na stole.",
        "misto": "spis",
        "veta": "Pásmo 2/4 — s následky: 2 ze 4 slotů prošly.",
      },
    ],
    "seq": 64,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 8 — uzel zvládnutý s následky.",
      },
    ],
    "seq": 65,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "co má štítek Gangster, vlastníkovi ve slotu propadne; vyprší za 3 kola. Aktivních postihů: 1.",
        "misto": "spis",
        "veta": "Za 2/4 — s následky: Frank Kowalski — Nervy v hajzlu (lehký, zámkový).",
      },
    ],
    "seq": 66,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (útok, nástroj, improvizace), jedna skrytá role čeká na nejhorší. Zbraň tady projde i na očích.",
      },
    ],
    "seq": 67,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce útok · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Probít se vpřed: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Najít, kudy ujet: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Kličkovat mezi vozy: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Vydržet nápor: kotva 2, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 69,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Sekáček na led" — Frank Kowalski · Práh 5 = kotva 4 +1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 0,
        "veta": "Chtělo to útok 5, „Sekáček na led" má 4.",
      },
    ],
    "seq": 72,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Zednická lžíce" — Cesare Fontana · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 1,
        "veta": "nástroj 4 proti prahu 2.",
      },
    ],
    "seq": 73,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Hovězí vývar" — Vincenc Bartoš · Práh 5 = kotva 4 +1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Chtělo to improvizaci 5, „Hovězí vývar" má 4.",
      },
    ],
    "seq": 74,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Bedna kanadské" — Rudolf Mazur · Práh 2 = kotva 2 bez šumu.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 3,
        "veta": "Chtělo to obranu 2, „Bedna kanadské" má 1.",
      },
    ],
    "seq": 75,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Optimální rozdělení TÉHOŽ commitu by dalo 2/4 (2/4 — s následky) — 1 zásah zůstal na stole.",
        "misto": "spis",
        "veta": "Pásmo ≤1/4 — průšvih: 1 ze 4 slotů prošel. Náklad ztrácí 1 bednu (zbývá 3).",
      },
    ],
    "seq": 76,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 9 — hlučné násilí (vysoký útok).",
      },
    ],
    "seq": 77,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 10 — průšvih v uzlu.",
      },
    ],
    "seq": 78,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "vlastník vidí názvy věcí, ne jejich staty; drží do vyléčení v motelu. Aktivních postihů: 2.",
        "misto": "spis",
        "veta": "Za ≤1/4 — průšvih: Frank Kowalski — Otřes mozku (těžký, informační).",
      },
    ],
    "seq": 79,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "detail": "Sloty 2 splnil / 5 propadl · postihy 1 · gamble 2× · složen 0× · ztracené bedny 2 · doručeno: ne.",
        "misto": "spis",
        "veta": "Tajný cíl Vincenc Bartoš: Projeď celou cestu bez jediného vážného zranění — ať tě polda nemá kam zapsat. — nesplněn.",
      },
    ],
    "seq": 80,
    "typ": "goal_scored",
  },
  {
    "anotace": [
      {
        "detail": "Sloty 1 splnil / 4 propadl · postihy 4 · gamble 0× · složen 0× · ztracené bedny 3 · doručeno: ne.",
        "misto": "spis",
        "veta": "Tajný cíl Frank Kowalski: Kupecké slovo platí: ani jedna bedna nesmí padnout tvou vinou — a stejně dojedeš. — nesplněn.",
      },
    ],
    "seq": 81,
    "typ": "goal_scored",
  },
  {
    "anotace": [
      {
        "detail": "Sloty 3 splnil / 2 propadl · postihy 0 · gamble 0× · složen 0× · ztracené bedny 2 · doručeno: ne.",
        "misto": "spis",
        "veta": "Tajný cíl Rudolf Mazur: Ať je z protokolu znát, že to byla tvoje věc, co aspoň třikrát rozhodlo. — SPLNĚN.",
      },
    ],
    "seq": 82,
    "typ": "goal_scored",
  },
  {
    "anotace": [
      {
        "detail": "Sloty 2 splnil / 1 propadl · postihy 0 · gamble 0× · složen 0× · ztracené bedny 0 · doručeno: ne.",
        "misto": "spis",
        "veta": "Tajný cíl Cesare Fontana: Do New Yorku dorazíš aspoň se dvěma šrámy na těle — a bednu přesto složíš. — nesplněn.",
      },
    ],
    "seq": 83,
    "typ": "goal_scored",
  },
  {
    "anotace": [
      {
        "detail": "Uzlů 4 · zbývá beden 3 · konečný Žár 10 · kredity 0.",
        "misto": "spis",
        "veta": "Spis se uzavírá: NEVYŘEŠENO — prohraná konfrontace s pronásledovatelem.",
      },
    ],
    "seq": 84,
    "typ": "run_ended",
  },
]
`;

exports[`golden anotace nad reálným obsahem > seed 42, 1 hráč, Malone 1`] = `
[
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Na výběr: dvě cesty — typ místa je vidět předem a rozhoduje o tom, jestli projde zbraň.",
      },
    ],
    "seq": 2,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: Zátaras u Verony (člověk) — někdo se ti dívá do rukou — zbraň na očích neprojde.",
      },
    ],
    "seq": 3,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (útok, obrana, improvizace), jedna skrytá role čeká na nejhorší. Zbraň na očích neprojde. Ve skryté roli se ale zbraň vyplatí.",
      },
    ],
    "seq": 4,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce útok · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Postavit se jim: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Ustát nápor: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Vyklouznout stranou: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce útok · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Tasit včas a první: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 6,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Svářečka" — Vincenc Bartoš · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 0,
        "veta": "Chtělo to útok 2, „Svářečka" má 1.",
      },
    ],
    "seq": 9,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Plechová vesta" — Vincenc Bartoš · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 1,
        "veta": "obrana 5 proti prahu 2.",
      },
    ],
    "seq": 10,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Banánový kanón" — Vincenc Bartoš · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 2,
        "veta": "improvizace 4 proti prahu 2.",
      },
    ],
    "seq": 11,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Sekáček na led" — Vincenc Bartoš · Práh 2 = kotva 3 −1.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 3,
        "veta": "útok 4 proti prahu 2.",
      },
    ],
    "seq": 12,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Z toho, co tým committnul, se líp rozdělit nedalo — tohle bylo nejlepší možné.",
        "misto": "spis",
        "veta": "Pásmo 3/4 — hladce: 3 ze 4 slotů prošly.",
      },
    ],
    "seq": 13,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 1 — hlučné násilí (vysoký útok).",
      },
    ],
    "seq": 14,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Kredity +2 (zvládnutý uzel 3 ze 4), zůstatek 2.",
      },
    ],
    "seq": 15,
    "typ": "credit_flow",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Na výběr: dvě cesty — typ místa je vidět předem a rozhoduje o tom, jestli projde zbraň.",
      },
    ],
    "seq": 16,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: Přívoz přes Hudson (člověk) — někdo se ti dívá do rukou — zbraň na očích neprojde.",
      },
    ],
    "seq": 17,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (improvizace, nástroj, hodnota), jedna skrytá role čeká na nejhorší. Zbraň na očích neprojde. Ve skryté roli se ale zbraň vyplatí.",
      },
    ],
    "seq": 18,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Zamotat hlavu: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Přesunout z očí: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce hodnotu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Přilepšit do dlaně: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce útok · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Kdyby čenichal dál: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 20,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Konev na mléko" — Vincenc Bartoš · Práh 5 = kotva 4 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 0,
        "veta": "Chtělo to improvizaci 5, „Konev na mléko" má 4.",
      },
    ],
    "seq": 23,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Starý kompas" — Vincenc Bartoš · Práh 3 = kotva 3 bez šumu.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 1,
        "veta": "nástroj 3 proti prahu 3.",
      },
    ],
    "seq": 24,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Zlaté hodinky" — Vincenc Bartoš · Rušení platí v celém runu, ne jen v tomhle slotu. · Práh 5 = kotva 3 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Federální agent Malone ruší hodnotu — „Zlaté hodinky" se počítá jako 0 proti prahu 5.",
      },
    ],
    "seq": 25,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Pytel cementu" — Vincenc Bartoš · Práh 3 = kotva 3 bez šumu.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 3,
        "veta": "útok 3 proti prahu 3.",
      },
    ],
    "seq": 26,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Z toho, co tým committnul, se líp rozdělit nedalo — tohle bylo nejlepší možné.",
        "misto": "spis",
        "veta": "Pásmo 2/4 — s následky: 2 ze 4 slotů prošly.",
      },
    ],
    "seq": 27,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 2 — uzel zvládnutý s následky.",
      },
    ],
    "seq": 28,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "týmu ubyla 1 bedna nákladu; jednorázově. Aktivních postihů: 0.",
        "misto": "spis",
        "veta": "Za 2/4 — s následky: Vincenc Bartoš — Vysypaná bedna (lehký, ztrátový).",
      },
    ],
    "seq": 29,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Na výběr: dvě cesty — typ místa je vidět předem a rozhoduje o tom, jestli projde zbraň.",
      },
    ],
    "seq": 30,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: nález — situace se neřeší — něco se jen najde.",
      },
    ],
    "seq": 31,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Kredity +5 (nález v truhle), zůstatek 7.",
      },
    ],
    "seq": 32,
    "typ": "credit_flow",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Tým zajel do motelu — léčení a směna stojí kredity, čas neběží.",
      },
    ],
    "seq": 33,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Kredity −3 (směna věci v motelu), zůstatek 4.",
      },
    ],
    "seq": 34,
    "typ": "credit_flow",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Na výběr: dvě cesty — typ místa je vidět předem a rozhoduje o tom, jestli projde zbraň.",
      },
    ],
    "seq": 35,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: Překladiště v Syracuse (člověk) — někdo se ti dívá do rukou — zbraň na očích neprojde.",
      },
    ],
    "seq": 36,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (útok, nástroj, hodnota), jedna skrytá role čeká na nejhorší. Zbraň na očích neprojde. Skrytá role stojí na improvizaci. Jedna role zbraň přímo vítá.",
      },
    ],
    "seq": 37,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce útok · viditelná role · výjimka ze štítku: Gangster projde i na očích · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Zatlačit hrubě: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Odsunout závoru: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce hodnotu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Podmáznout dlaň: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce improvizaci · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Zmást papírem: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 39,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Řeznický hák" — Vincenc Bartoš · Práh 4 = kotva 3 +1.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 0,
        "veta": "útok 4 proti prahu 4.",
      },
    ],
    "seq": 42,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Lopata" — Vincenc Bartoš · Práh 2 = kotva 3 −1.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 1,
        "veta": "nástroj 4 proti prahu 2.",
      },
    ],
    "seq": 43,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Pytel brambor" — Vincenc Bartoš · Rušení platí v celém runu, ne jen v tomhle slotu. · Práh 4 = kotva 3 +1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Federální agent Malone ruší hodnotu — „Pytel brambor" se počítá jako 0 proti prahu 4.",
      },
    ],
    "seq": 44,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Kněžský kolárek" — Vincenc Bartoš · Práh 5 = kotva 3 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 3,
        "veta": "Chtělo to improvizaci 5, „Kněžský kolárek" má 4.",
      },
    ],
    "seq": 45,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Z toho, co tým committnul, se líp rozdělit nedalo — tohle bylo nejlepší možné.",
        "misto": "spis",
        "veta": "Pásmo 2/4 — s následky: 2 ze 4 slotů prošly.",
      },
    ],
    "seq": 46,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 3 — hlučné násilí (vysoký útok).",
      },
    ],
    "seq": 47,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 4 — uzel zvládnutý s následky.",
      },
    ],
    "seq": 48,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "vlastník má o 1 menší ruku; vyprší za 2 kola. Aktivních postihů: 1.",
        "misto": "spis",
        "veta": "Za 2/4 — s následky: Vincenc Bartoš — Naražené rameno (lehký, ztrátový).",
      },
    ],
    "seq": 49,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Zátah: Žár překročil práh, jiná cesta než přes kontrolu není.",
      },
    ],
    "seq": 50,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Cesta zvolena: Zátah na páté silnici (zátah) — jiná cesta není — zbraň projde.",
      },
    ],
    "seq": 51,
    "typ": "map_move",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (útok, nástroj, improvizace), jedna skrytá role čeká na nejhorší. Zbraň tady projde i na očích.",
      },
    ],
    "seq": 52,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce útok · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Prorazit blokádu: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Strhnout do postranní: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Zmizet v ulicích: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Držet nervy u okna: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 54,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "Tažení je naslepo, v ruce zbývalo kusů: 3. Sázka jde jednou za situaci. Tažená věc nevyšla — slot 3.",
        "misto": "spis",
        "veta": "Sázka: místo „Zpěv opilce" přišel „Bedna kanadské" (ruka Vincenc Bartoš).",
      },
    ],
    "seq": 56,
    "typ": "gamble",
  },
  {
    "anotace": [
      {
        "detail": "„Dědečkova brokovnice" — Vincenc Bartoš · Práh 4 = kotva 4 bez šumu.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 0,
        "veta": "útok 5 proti prahu 4.",
      },
    ],
    "seq": 58,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Rezervní pneumatika" — Vincenc Bartoš · Práh 5 = kotva 4 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 1,
        "veta": "Chtělo to nástroj 5, „Rezervní pneumatika" má 4.",
      },
    ],
    "seq": 59,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Bedna kanadské" — Vincenc Bartoš · Práh 2 = kotva 4 −2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Chtělo to improvizaci 2, „Bedna kanadské" má 1.",
      },
    ],
    "seq": 60,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Konšelův prsten" — Vincenc Bartoš · Práh 5 = kotva 3 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 3,
        "veta": "Chtělo to obranu 5, „Konšelův prsten" má 2.",
      },
    ],
    "seq": 61,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Optimální rozdělení TÉHOŽ commitu by dalo 2/4 (2/4 — s následky) — 1 zásah zůstal na stole.",
        "misto": "spis",
        "veta": "Pásmo ≤1/4 — průšvih: 1 ze 4 slotů prošel. Náklad ztrácí 1 bednu (zbývá 4).",
      },
    ],
    "seq": 62,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 5 — zbraň v akci.",
      },
    ],
    "seq": 63,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 2 na 7 — průšvih v uzlu.",
      },
    ],
    "seq": 64,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "vlastník vidí názvy věcí, ne jejich staty; drží do vyléčení v motelu. Aktivních postihů: 2.",
        "misto": "spis",
        "veta": "Za ≤1/4 — průšvih: Vincenc Bartoš — Otřes mozku (těžký, informační).",
      },
    ],
    "seq": 65,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "misto": "spis",
        "veta": "Postih „Naražené rameno" (Vincenc Bartoš) vypršel.",
      },
    ],
    "seq": 66,
    "typ": "penalty_expired",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (improvizace, obrana, nástroj), jedna skrytá role čeká na nejhorší. Zbraň na očích neprojde. Ve skryté roli se ale zbraň vyplatí.",
      },
    ],
    "seq": 67,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Zapřít totožnost: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Nedat na sobě znát: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce nástroj · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Objet ho stranou: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce útok · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Kdyby sáhl po zbrani: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 69,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Hovězí vývar" — Vincenc Bartoš · Práh 5 = kotva 4 +1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 0,
        "veta": "Chtělo to improvizaci 5, „Hovězí vývar" má 4.",
      },
    ],
    "seq": 72,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Provaz a kladka" — Vincenc Bartoš · Práh 3 = kotva 4 −1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 1,
        "veta": "Chtělo to obranu 3, „Provaz a kladka" má 1.",
      },
    ],
    "seq": 73,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Kožená zástěra" — Vincenc Bartoš · Práh 4 = kotva 4 bez šumu.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Chtělo to nástroj 4, „Kožená zástěra" má 2.",
      },
    ],
    "seq": 74,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Mosazný boxer" — Vincenc Bartoš · Práh 1 = kotva 3 −2.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 3,
        "veta": "útok 4 proti prahu 1.",
      },
    ],
    "seq": 75,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Optimální rozdělení TÉHOŽ commitu by dalo 3/4 (3/4 — hladce) — 2 zásahy zůstaly na stole.",
        "misto": "spis",
        "veta": "Pásmo ≤1/4 — průšvih: 1 ze 4 slotů prošel. Náklad ztrácí 1 bednu (zbývá 3).",
      },
    ],
    "seq": 76,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 1 na 8 — hlučné násilí (vysoký útok).",
      },
    ],
    "seq": 77,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "misto": "okraj",
        "veta": "Šerif postoupil o 2 na 10 — průšvih v uzlu.",
      },
    ],
    "seq": 78,
    "typ": "zar_move",
  },
  {
    "anotace": [
      {
        "detail": "vlastník vidí názvy věcí, ne jejich staty; drží do vyléčení v motelu. Aktivních postihů: 2.",
        "misto": "spis",
        "veta": "Za ≤1/4 — průšvih: Vincenc Bartoš — Otřes mozku (těžký, informační).",
      },
    ],
    "seq": 79,
    "typ": "penalty_added",
  },
  {
    "anotace": [
      {
        "detail": "Commituje se naslepo: telegraf je jediné, co o situaci před commitem víš.",
        "misto": "spis",
        "veta": "Telegraf slibuje tři viditelné role (útok, obrana, improvizace), jedna skrytá role čeká na nejhorší. Zbraň tady projde i na očích. Ve skryté roli se ale zbraň vyplatí.",
      },
    ],
    "seq": 80,
    "typ": "telegraf_derived",
  },
  {
    "anotace": [
      {
        "detail": "Chce útok · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 0,
        "veta": "Probít se ven: kotva 4, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce obranu · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 1,
        "veta": "Ustát salvu: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce improvizaci · viditelná role · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 2,
        "veta": "Strhnout do pole: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
      {
        "detail": "Chce útok · skrytá role — telegraf ji hlásil jen počtem · Kotva je stálá a naučitelná, šum se dorolí u každé instance zvlášť.",
        "misto": "slot",
        "slot_index": 3,
        "veta": "Krýt záda: kotva 3, šum ±2 — přesný práh až po vyhodnocení.",
      },
    ],
    "seq": 82,
    "typ": "situation_revealed",
  },
  {
    "anotace": [
      {
        "detail": "„Uříznutá hlaveň" — Vincenc Bartoš · Práh 3 = kotva 4 −1.",
        "misto": "slot",
        "razitko": "PROŠLO",
        "slot_index": 0,
        "veta": "útok 4 proti prahu 3.",
      },
    ],
    "seq": 85,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Stříbrná placatka" — Vincenc Bartoš · Práh 2 = kotva 3 −1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 1,
        "veta": "Chtělo to obranu 2, „Stříbrná placatka" má 1.",
      },
    ],
    "seq": 86,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Medvědí kožich" — Vincenc Bartoš · Práh 4 = kotva 3 +1.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 2,
        "veta": "Chtělo to improvizaci 4, „Medvědí kožich" má 1.",
      },
    ],
    "seq": 87,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "„Dámský revolver" — Vincenc Bartoš · Práh 5 = kotva 3 +2.",
        "misto": "slot",
        "razitko": "NEPROŠLO",
        "slot_index": 3,
        "veta": "Chtělo to útok 5, „Dámský revolver" má 3.",
      },
    ],
    "seq": 88,
    "typ": "slot_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Optimální rozdělení TÉHOŽ commitu by dalo 2/4 (2/4 — s následky) — 1 zásah zůstal na stole.",
        "misto": "spis",
        "veta": "Pásmo ≤1/4 — průšvih: 1 ze 4 slotů prošel. Náklad ztrácí 1 bednu (zbývá 2).",
      },
    ],
    "seq": 89,
    "typ": "band_resolved",
  },
  {
    "anotace": [
      {
        "detail": "Smazáno (lehké): nic · Zůstává (těžké): Otřes mozku, Otřes mozku · Sloty jsou týmové, ne vlastníkovy — složení jen sníží počet committnutých karet, propadne stejný počet slotů jako neobsazené.",
        "misto": "spis",
        "veta": "Vincenc Bartoš se složil — třetí postih se nepřidává, postava kolo–dvě leží.",
      },
    ],
    "seq": 90,
    "typ": "character_folded",
  },
  {
    "anotace": [
      {
        "detail": "Sloty 10 splnil / 14 propadl · postihy 4 · gamble 1× · složen 1× · ztracené bedny 4 · doručeno: ne.",
        "misto": "spis",
        "veta": "Tajný cíl Vincenc Bartoš: Ať v celém spisu nestojí, žes na někoho mířil zbraní na očích — a přesto dojedeš. — nesplněn.",
      },
    ],
    "seq": 91,
    "typ": "goal_scored",
  },
  {
    "anotace": [
      {
        "detail": "Uzlů 5 · zbývá beden 2 · konečný Žár 10 · kredity 4.",
        "misto": "spis",
        "veta": "Spis se uzavírá: NEVYŘEŠENO — prohraná konfrontace s pronásledovatelem.",
      },
    ],
    "seq": 92,
    "typ": "run_ended",
  },
]
`;
